# weaksig-plot

./: .gitignore  MapSig.py  MaxSig.py  README.md  README.rst  setup.cfg  setup.py
weaksig_plot/: __init__.py  plots.py
