[metadata]
name = weaksig_plot
version = 0.5.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = WSPR, JT65, JT9 and other weak signal modes: read, analyze, plot data.
url = https://github.com/scivision/weaksig-plot
keywords =
  WSPR
  JT65
  JT9
  FT8
  PSK31
  HamSCI
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  pandas
  matplotlib
  seaborn
  cartopy
  sciencedates
  pymap3d
  maidenhead

[options.extras_require]
tests =
  pytest
cov =
  pytest-timeout
  flake8
  mypy

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
